--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,7 @@
+@import-normalize;
+@import "../design-tokens/scss-variables.scss";
+@import "../design-tokens/css-variables.scss";
+
 * {
 	margin: 0;
 	padding: 0;
@@ -6,5 +10,6 @@
 }
 
 body {
-	margin: 0 0 55px 0;
+	height: 100vh;
+	width: 100vw;
 }
