--- a/src/components/bottommenu/BottomMenu.module.scss
+++ b/src/components/bottommenu/BottomMenu.module.scss
@@ -7,33 +7,26 @@
 	background-color: hsl(31, 94%, 67%);
 	display: flex;
 	overflow-x: auto;
-}
 
-.nav__link {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	flex-grow: 1;
-	min-width: 50px;
-	overflow: hidden;
-	white-space: nowrap;
-	font-family: sans-serif;
-	font-size: 18px;
-	font-weight: bold;
-	color: hsla(7, 36%, 30%, 0.5);
-	text-decoration: none;
-	-webkit-tap-highlight-color: transparent;
-	transition: background-color 0.1s ease-in-out;
-}
+	&__link {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		flex-grow: 1;
+		min-width: 50px;
+		overflow: hidden;
+		white-space: nowrap;
+		font-family: sans-serif;
+		font-size: 18px;
+		font-weight: bold;
+		color: hsla(7, 36%, 30%, 0.5);
+		text-decoration: none;
+		-webkit-tap-highlight-color: transparent;
+		transition: background-color 0.1s ease-in-out;
+	}
 
-.nav__link:hover {
-}
-
-.nav__link--active {
-	color: hsl(7, 36%, 30%);
-}
-
-.nav__icon {
-	font-size: 18px;
+	&__link--active {
+		color: hsl(7, 36%, 30%);
+	}
 }
