--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,3 +1,45 @@
-.test {
-	background-color: black;
+@import "../../design-tokens/scss-variables.scss";
+
+.Page {
+	height: 100vh;
+	&__header {
+		min-height: 40vh;
+		background-image: url(../../assets/headers/contact.jpg);
+		background-size: cover;
+		background-position: center center;
+	}
+
+	&__content {
+		background: url("../../assets/patterns/dog-pattern.png");
+		background-color: var(--color-primary-background);
+		border-radius: 72px 72px 0px 0px;
+		position: relative;
+		top: -56px;
+		padding: 48px;
+		height: 60vh;
+		width: 100vw;
+		&__title {
+			font-size: 3em;
+			color: var(--color-primary);
+			margin-bottom: 24px;
+		}
+		&__form {
+			display: flex;
+			flex-direction: column;
+			&__input {
+				padding: 16px;
+				margin-bottom: 24px;
+				border: 4px solid var(--color-primary);
+				border-radius: 16px;
+			}
+			&__submit {
+				padding: 16px 64px;
+				border-radius: 100px;
+				background-color: var(--color-primary);
+				color: hsl(0, 0%, 100%);
+				font-weight: 900;
+				border: none;
+			}
+		}
+	}
 }
