--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,41 @@
-.test {
-	background-color: red;
+@import "../../design-tokens/scss-variables.scss";
+
+.Page {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	height: 100vh;
+	&__opener {
+		min-height: 80vh;
+		background-color: var(--color-primary-background);
+		background: url("../../assets/patterns/dog-pattern.png");
+		&__title {
+			font-size: 7em;
+			color: var(--color-primary);
+			margin-bottom: 24px;
+			text-align: center;
+			&__secundary {
+				color: var(--color-secundary);
+			}
+		}
+		&__subtitle {
+			text-align: center;
+			font-size: 2em;
+			color: var(--color-primary);
+			margin-bottom: 24px;
+		}
+		&__logo {
+			width: 50vw;
+		}
+	}
+	&__start {
+		&__button {
+			padding: 16px 64px;
+			border-radius: 100px;
+			background-color: var(--color-primary);
+			color: hsl(0, 0%, 100%);
+			font-weight: 900;
+			border: none;
+		}
+	}
 }
