--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -4,13 +4,13 @@
 	height: 100vh;
 	&__header {
 		min-height: 40vh;
-		background-image: url(../../assets/headers/contact.jpg);
+		background-image: url("../../assets/images/headers/contact.jpg");
 		background-size: cover;
 		background-position: center center;
 	}
 
 	&__content {
-		background: url("../../assets/patterns/dog-pattern.png");
+		background: url("../../assets/images/patterns/dog-pattern.png");
 		background-color: var(--color-primary-background);
 		border-radius: 72px 72px 0px 0px;
 		position: relative;
